--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA7mhoVM1_KCAf-djbXPKGjLIjN6x2Kh_o "></script>
+
 </head>
 <body>
   <app-root></app-root>
