--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA7mhoVM1_KCAf-djbXPKGjLIjN6x2Kh_o "></script>
+
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA7mhoVM1_KCAf-djbXPKGjLIjN6x2Kh_o"></script>
+
+  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" />
 
 </head>
 <body>
